--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
-    <title>Text Converter</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap"
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Text Converter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
